src/objects/Travel_Data__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Airline__c</fullName>
        <label>Airline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport__c</fullName>
        <label>Airport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avis_AWD__c</fullName>
        <label>Avis AWD #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avis_Wizard__c</fullName>
        <label>Avis Wizard #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cabin__c</fullName>
        <label>Cabin #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In_Date__c</fullName>
        <label>Check In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date__c</fullName>
        <label>Check Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <label>Confirmation #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Date__c</fullName>
        <label>Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <label>Departure Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_off_Date__c</fullName>
        <description>This field is used to capture the drop of date</description>
        <label>Drop off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drop_off_Location__c</fullName>
        <description>This field is used to capture the drop of location</description>
        <label>Drop off Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_off_Time__c</fullName>
        <description>This field is used to capture the drop off time</description>
        <label>Drop off Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flight_ID__c</fullName>
        <label>Flight ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight__c</fullName>
        <label>Flight #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gr_Transportation_Inc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gr Transportation Inc?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Name__c</fullName>
        <label>Hotel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <label>Import Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kitchen_needed__c</fullName>
        <description>It will store the details about Kitchen request</description>
        <label>Kitchen needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RE Migrated Records</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Wish__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Travel Data</relationshipLabel>
        <relationshipName>Travel_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pick_up_Date__c</fullName>
        <label>Pick up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pick_up_Time__c</fullName>
        <label>Pick up Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_up_location__c</fullName>
        <description>This filed used to capture the pick up location</description>
        <label>Pick up location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Driver__c</fullName>
        <label>Preferred Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Airline__c</fullName>
        <description>Airline</description>
        <label>RE Airline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Airport__c</fullName>
        <description>Arrival Information:Airport</description>
        <label>RE Airport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Airport_departure__c</fullName>
        <description>Depature Information:Airport</description>
        <label>RE Airport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Arrival_Date__c</fullName>
        <description>Arrival Information:Date</description>
        <label>RE Arrival Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Arrival_Time__c</fullName>
        <description>Arrival Information:Time</description>
        <label>RE Arrival Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Check_In_Date__c</fullName>
        <description>Check-in Date</description>
        <label>RE Check In Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Check_Out_Date__c</fullName>
        <description>Check-out Date</description>
        <label>RE Check Out Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Company_1__c</fullName>
        <description>Cruise Company</description>
        <label>RE Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Company_2__c</fullName>
        <description>Car Company</description>
        <label>RE Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Company__c</fullName>
        <description>Limo Company</description>
        <label>RE Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Confirmation__c</fullName>
        <description>Confirmation #</description>
        <label>RE Confirmation #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Confirmed_Date__c</fullName>
        <description>Confirmed Date</description>
        <label>RE Confirmed Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Departure_Date__c</fullName>
        <description>Departure Date</description>
        <label>RE Departure Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Departure_Time__c</fullName>
        <description>Departure Time</description>
        <label>RE Departure Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_End_date__c</fullName>
        <description>End Date</description>
        <label>RE End date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Flight_ID__c</fullName>
        <description>Flight ID</description>
        <label>RE Flight ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Flight__c</fullName>
        <description>Flight Number</description>
        <label>RE Flight #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Gr_Transportation_Inc__c</fullName>
        <description>Ground xfer incl.</description>
        <label>RE Gr Transportation Inc?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Hotel_Name__c</fullName>
        <description>Hotel Name</description>
        <label>RE Hotel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>ID, IMPORTID</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Notes__c</fullName>
        <description>Notes</description>
        <label>RE Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Pick_up_Date__c</fullName>
        <description>Pick-up Date</description>
        <label>RE Pick up Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Pick_up_Location__c</fullName>
        <description>Pick-up Location</description>
        <label>RE Pick-up Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Pick_up_Time__c</fullName>
        <description>Pick-up Time</description>
        <label>RE Pick up Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Reservation_Name__c</fullName>
        <description>Reserved Name</description>
        <label>RE Reservation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Sequence__c</fullName>
        <description>Sequence</description>
        <label>RE Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Start_Date__c</fullName>
        <description>Start Date</description>
        <label>RE Start Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_of_Free_Tix__c</fullName>
        <description># Free Tix</description>
        <label>RE # of Free Tix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_of_Paid_Tix__c</fullName>
        <description># Paid Tickets</description>
        <label>RE # of Paid Tix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_of_Rooms__c</fullName>
        <description># of Rooms</description>
        <label>RE # of Rooms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation_Name__c</fullName>
        <description>This field is used to capture reservation name</description>
        <label>Reservation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <label>Reservation #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserved_Name__c</fullName>
        <label>Reserved Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>This field used as a picklist with the values of 1-10.</description>
        <label>Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Beds__c</fullName>
        <label># of Beds?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Free_Tix__c</fullName>
        <label># of Free Tix</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Paid_Tix__c</fullName>
        <label># of Paid Tix</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Participants__c</fullName>
        <label># of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Rooms__c</fullName>
        <label># of Rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Travel Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>Travel Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Data</pluralLabel>
    <recordTypes>
        <fullName>Activities_Excursions</fullName>
        <active>true</active>
        <label>Activities/Excursions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cruise</fullName>
        <active>true</active>
        <label>Cruise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flight</fullName>
        <active>true</active>
        <label>Flight</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ground_Transportation</fullName>
        <active>true</active>
        <label>Ground Transportation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Limousine</fullName>
        <active>true</active>
        <label>Limousine</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lodging</fullName>
        <active>true</active>
        <label>Lodging</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical_Needs</fullName>
        <active>true</active>
        <label>Medical Needs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rental_Car</fullName>
        <active>true</active>
        <label>Rental Car</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>